[package]
name = "radio"
version = "0.6.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros", "http2"] }
clap = { version = "4.5.1", features = ["derive"] }
is-root = "0.1.3"
jwalk = "0.8.1"
rand = "0.8.5"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.8.10"

[target.'cfg(windows)'.dependencies]
windirs = "1.0.1"
